# evaluatorrs

./: Cargo.toml  README.md
.github/workflows/: base_ci.yml  rust.yml
benches/: evalexpr_benchmark.rs  my_benchmark.rs  simple_bench.rs
src/: context.rs  lib.rs  main.rs  parsers.rs  utils.rs
src/formula_stores/: mod.rs
src/formulas/: base_formula.rs  macros.rs  math.rs  min.rs  mod.rs  operator.rs  root_formula.rs  sin.rs
src/function_stores/: array_store.rs  empty_store.rs  hashmap_store.rs  mod.rs  vector_store.rs
src/tokens/: base_token.rs  mod.rs  number_like.rs  operator.rs
src/variable_stores/: empty_store.rs  hashmap_store.rs  mod.rs  vector_store.rs
