[package]
name = "evaluatorrs"
version = "0.0.1"
description = "Tools for runtime evaluation of mathematical expressions"
repository = "https://github.com/Rosdf/evaluatorrs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["math", "expression", "evaluation"]
categories = ["parsing-tools"]
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
evalexpr = "11.0.1"

[[bench]]
name = "simple_bench"
harness = false

[dependencies]
libm = { version = "0.2.7", optional = true }

[build-dependencies]

[features]
default = ["std"]

# Provide impls for common standard library types like Vec<T> and HashMap<K, V>.
# Requires a dependency on the Rust standard library.
std = []

# Provide ability to calculate complex mathematical functions without std lib.
libm = ["dep:libm"]

